--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title></title>
 </head>
 <body>
-    <div>PATOS</div>
+    <div>Alteração</div>
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="script.js"></script>
 </body>
